--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,72 @@
 .App {
+  
+  scroll-behavior: smooth;
+  background-color: rgba(214, 220, 211, 0.71);
+}
+span{
+  font-size: 50px;
+  color: rgb(234, 242, 18);
+  
+}
+
+
+h1{
+  color: white;
+  font-size: 25px;
+}
+.navbar-light .navbar-toggler{
+  margin: 0;
+  padding: 0;
+}
+.navbar-light .navbar-toggler:focus{
+box-shadow: none;}
+.navbar-light .navbar-toggler-icon{
+  width: 45px;
+  height: 40px;
+
+}
+
+.container2{
   text-align: center;
+  margin-top: 50px;
+  height: 260px;
+}
+h2{
+  font-weight:100;
+  font-size: 100px;
+}
+h4{
+  padding-left: 15px;
+  padding-top: 15px;
+  font-weight:100;
+  font-size: 30px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+li a{
+  padding: 15px;
+  text-decoration: none;
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
+li a:hover{
+color: yellow;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+.container3{
+  margin: auto;
+  margin-top: 50px;
+  height: 400px;
+  width: 1000px;
+
+}
+.cards{
+  background-color: rgba(214, 220, 211, 0.71);
+  align-items: center;
+}
+.container4{
+  margin: auto;
+  margin-top: 100px;
+  height: 400px;
+  width: 1000px;
+
 }
